# SCNewsBot

./: .gitignore  LICENSE  README.md  example.config.toml  example.env  leaderboard.json  pyproject.toml
.github/workflows/: black.yml
scnewsbot/: __main__.py  bot.py  utils.py
scnewsbot/Retired/: rstarcitizen.py
scnewsbot/extensions/: announcements.py  dt_converter.py  leaderboard.py  rstarcitizen.py  templates.py
