[tool.poetry]
name = "scnewsbot"
version = "1.0.3"
description = "A bot for the r/starcitizen Discord server."
authors = ["mudkipdev <mudkip@mudkip.dev>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "scnewsbot" }
]

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.3.2"
jishaku = "^2.5.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
